Updated the .portfolioItemTitle h3 in css to fix too much space above and below it.

--- a/style.css
+++ b/style.css
@@ -153,6 +153,10 @@ section p {
 
 }
 
+.portfolioItemTitle h3 {
+    margin: 10px auto;
+}
+
 .portfolioItemDescription{
     font-size: 1.25rem;
     margin: 0px 10px;
